[package]
name = "at_l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = "4.0.17"
crossterm = "0.25.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tui = "0.19.0"
